<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Safety" Id="{9ac51276-a3c2-4115-b10c-adf39bf6f5bc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Run			AT%Q* : BOOL;
	Start		AT%Q* : BOOL;
	Reset		AT%Q* : BOOL;
	
	SafetyInRun	AT%I* : BOOL;
	SaeftyOk 	AT%I* : BOOL;
	
	HWStart		AT%I* : BOOL;
	HWStop		AT%I* : BOOL;
	HWReset		AT%I* : BOOL;
	
	HWerror		AT%Q* : BOOL;
	HWSafetyOk	AT%Q* : BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>